Updates facet expand/collapse html and behavior * Swapping anchor with button for facet group expand/collapse clicks * Attaching the expand/collapse to the button rather than the h3 * collapsable.js is no longer needed because anchor tags are gone * Updates specs accordingly

--- a/app/assets/stylesheets/blacklight/_bootstrap_overrides.scss
+++ b/app/assets/stylesheets/blacklight/_bootstrap_overrides.scss
@@ -2,7 +2,8 @@
   @extend .py-2;
 }
 
-.card-header.collapse-toggle {
+// Facet field headings and buttons
+.facet-field-heading button {
   margin-bottom: 0;
 
   &::after {
@@ -20,7 +21,6 @@
     }
   }
 }
-
 
 .page-link {
   white-space: nowrap;
